--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "socket.io-client": "^4.7.2",
     "sslcommerz-lts": "^1.1.0",
     "stripe": "^14.7.0",
+    "uuid": "^9.0.1",
     "websocket": "^1.0.34",
     "ws": "^8.14.2"
   }
