--- a/ui/package.json
+++ b/ui/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^6.20.1",
     "sass": "^1.69.5",
     "socket.io-client": "^4.7.2",
-    "sslcommerz-lts": "^1.1.0"
+    "sslcommerz-lts": "^1.1.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
